--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-testIdentity-75AF34FD-AD77-497B-8E25-8A4B66014A2B;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=127.0.0.1;Database=TesteIndenty;User Id=sa;Password=<YourStrong@Passw0rd>;MultipleActiveResultSets=True;Encrypt=False;Trusted_Connection=False;Persist Security Info=False;TrustServerCertificate=False;Connection Timeout=90"
   },
   "Logging": {
     "LogLevel": {
